# parcial2-programacionweb

./: EXPOSICION.md  README.en.md  README.md  create_db.py  pyproject.toml
src/prestamos/: __init__.py  config.py  database.py  db_init.py  forms.py  models.py  run.py
src/prestamos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/prestamos/static/css/: styles.css
src/prestamos/templates/: base_template.html  elemento_view.html  index.html  mis_prestamos.html
src/prestamos/templates/admin/: elemento_form.html  login_form.html
src/prestamos/templates/personas/: form.html  lista.html
src/prestamos/templates/prestamos/: form.html  lista.html
src/prestamos/templates/usuarios/: form.html  lista.html
