[project]
name = "prestamos"
version = "0.1.0"
description = "Aplicación para gestionar préstamos de elementos audiovisuales"
authors = []
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "flask-login>=0.6.3",
    "python-dotenv>=0.19.0",
    "email-validator>=2.3.0",
    "python-slugify>=8.0.4",
    "psycopg>=3.2.10",
]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"